--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -114,7 +114,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,0,0">
       <item>
-       <widget class="QLabel" name="label_3">
+       <widget class="QLabel" name="label_progressBar">
         <property name="text">
          <string>下载进度</string>
         </property>
