1. 支持嵌套m3u8 2. 支持在合并mp4过程中快速取消退出

--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -63,7 +63,11 @@
        </widget>
       </item>
       <item row="0" column="2">
-       <widget class="QLineEdit" name="lineEdit_M3u8Url"/>
+       <widget class="QLineEdit" name="lineEdit_M3u8Url">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
       <item row="1" column="2">
        <widget class="QLineEdit" name="lineEdit_SaveDir"/>
