--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>747</width>
-    <height>247</height>
+    <width>802</width>
+    <height>260</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,21 +18,21 @@
     <item>
      <layout class="QGridLayout" name="gridLayout">
       <item row="4" column="0">
-       <widget class="QLabel" name="label_6">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>HostType</string>
+         <string>代理设置</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
-       <widget class="QPushButton" name="pushButton_SaveDir">
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>...</string>
+         <string>跳过前面几个TS</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
-       <widget class="QLineEdit" name="lineEdit_SkipTsCountFromHead"/>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="lineEdit_SaveDir"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_4">
@@ -41,17 +41,46 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="lineEdit_M3u8Url">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="lineEdit_SkipTsCountFromHead"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>保存位置</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
        <widget class="QLineEdit" name="lineEdit_FileName">
         <property name="placeholderText">
          <string>all</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_2">
+      <item row="1" column="2">
+       <widget class="QPushButton" name="pushButton_SaveDir">
+        <property name="minimumSize">
+         <size>
+          <width>40</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
         <property name="text">
-         <string>保存位置</string>
+         <string>...</string>
         </property>
        </widget>
       </item>
@@ -62,17 +91,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QLineEdit" name="lineEdit_M3u8Url">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QLineEdit" name="lineEdit_SaveDir"/>
-      </item>
-      <item row="4" column="2">
+      <item row="5" column="1">
        <widget class="QComboBox" name="comboBox_HostType">
         <item>
          <property name="text">
@@ -86,10 +105,20 @@
         </item>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_5">
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>跳过前面几个TS</string>
+         <string>HostType</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLineEdit" name="lineEdit_SetProxy">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="placeholderText">
+         <string>http://127.0.0.1:8080 socks5://127.0.0.1:1089</string>
         </property>
        </widget>
       </item>
