--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -67,16 +67,22 @@
       </item>
       <item row="1" column="2">
        <widget class="QPushButton" name="pushButton_SaveDir">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
-          <width>40</width>
-          <height>20</height>
+          <width>0</width>
+          <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>40</width>
-          <height>20</height>
+          <width>99999</width>
+          <height>99999</height>
          </size>
         </property>
         <property name="text">
@@ -119,6 +125,13 @@
         </property>
         <property name="placeholderText">
          <string>http://127.0.0.1:8080 socks5://127.0.0.1:1089</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="pushButton_curlMode">
+        <property name="text">
+         <string>curl模式</string>
         </property>
        </widget>
       </item>
