更新gomediay依赖 增加单线程下载模式

--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -131,6 +131,13 @@
      </widget>
     </item>
     <item>
+     <widget class="QCheckBox" name="checkBox_SingleThread">
+      <property name="text">
+       <string>单线程下载</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
