--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -187,6 +187,13 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="1">
+           <widget class="QCheckBox" name="checkBox_SkipMergeTs">
+            <property name="text">
+             <string>不合并ts为mp4</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
