--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -52,7 +52,11 @@
            </widget>
           </item>
           <item row="4" column="1">
-           <widget class="QLineEdit" name="lineEdit_SkipTsCountFromHead"/>
+           <widget class="QLineEdit" name="lineEdit_SkipTsExpr">
+            <property name="placeholderText">
+             <string>1,92-100</string>
+            </property>
+           </widget>
           </item>
           <item row="0" column="2">
            <widget class="QPushButton" name="pushButton_curlMode">
@@ -88,7 +92,7 @@
           <item row="4" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
-             <string>跳过前面几个TS</string>
+             <string>跳过ts信息</string>
             </property>
            </widget>
           </item>
