--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>780</width>
-    <height>299</height>
+    <width>779</width>
+    <height>338</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -152,6 +152,9 @@
           <property name="horizontalSpacing">
            <number>0</number>
           </property>
+          <property name="verticalSpacing">
+           <number>6</number>
+          </property>
           <item row="0" column="0">
            <widget class="QCheckBox" name="checkBox_Insecure">
             <property name="text">
@@ -166,6 +169,13 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="checkBox_Skip_EXT_X_DISCONTINUITY">
+            <property name="text">
+             <string>跳过 #EXT-X-DISCONTINUITY 标签包裹的ts</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="1">
            <widget class="QCheckBox" name="checkBox_SkipMergeTs">
             <property name="text">
@@ -173,10 +183,10 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QCheckBox" name="checkBox_Skip_EXT_X_DISCONTINUITY">
+          <item row="2" column="0">
+           <widget class="QCheckBox" name="checkBox_DebugLog">
             <property name="text">
-             <string>跳过 #EXT-X-DISCONTINUITY 标签包裹的ts</string>
+             <string>调试日志</string>
             </property>
            </widget>
           </item>
