--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -54,7 +54,7 @@
           <item row="4" column="1">
            <widget class="QLineEdit" name="lineEdit_SkipTsExpr">
             <property name="placeholderText">
-             <string>1,92-100</string>
+             <string>1,92-100,http.code=403</string>
             </property>
            </widget>
           </item>
