--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>779</width>
-    <height>338</height>
+    <width>770</width>
+    <height>353</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,17 +23,7 @@
       <widget class="QWidget" name="page">
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <layout class="QGridLayout" name="gridLayout">
-          <property name="horizontalSpacing">
-           <number>0</number>
-          </property>
-          <item row="0" column="1">
-           <widget class="QLineEdit" name="lineEdit_M3u8Url">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
+         <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
           <item row="0" column="0">
            <widget class="QLabel" name="label">
             <property name="text">
@@ -41,65 +31,17 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="lineEdit_SaveDir"/>
-          </item>
-          <item row="2" column="1">
-           <widget class="QLineEdit" name="lineEdit_FileName">
-            <property name="placeholderText">
-             <string>all</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QLineEdit" name="lineEdit_SkipTsExpr">
-            <property name="placeholderText">
-             <string>1,92-100,http.code=403,if-http.code-merge_ts</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QPushButton" name="pushButton_curlMode">
-            <property name="text">
-             <string>curl模式</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="0">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>代理设置</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="0">
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>下载线程数</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="1">
-           <widget class="QLineEdit" name="lineEdit_ThreadCount">
-            <property name="text">
-             <string>8</string>
-            </property>
-            <property name="placeholderText">
-             <string>[1,1000]</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0">
+          <item row="3" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
              <string>跳过ts信息</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_2">
+          <item row="5" column="0" rowspan="2">
+           <widget class="QLabel" name="label_6">
             <property name="text">
-             <string>保存位置</string>
+             <string>下载线程数</string>
             </property>
            </widget>
           </item>
@@ -110,13 +52,75 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="lineEdit_SaveDir"/>
+          </item>
           <item row="5" column="1">
+           <widget class="QLineEdit" name="lineEdit_ThreadCount">
+            <property name="text">
+             <string>8</string>
+            </property>
+            <property name="placeholderText">
+             <string>[1,1000]</string>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="1">
+           <widget class="QLineEdit" name="lineEdit_TsTempDir">
+            <property name="placeholderText">
+             <string>默认为保存位置</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>代理设置</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QLineEdit" name="lineEdit_SkipTsExpr">
+            <property name="placeholderText">
+             <string>1,92-100,http.code=403,if-http.code-merge_ts</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLineEdit" name="lineEdit_M3u8Url">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="lineEdit_FileName">
+            <property name="placeholderText">
+             <string>all</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
            <widget class="QLineEdit" name="lineEdit_SetProxy">
             <property name="text">
              <string/>
             </property>
             <property name="placeholderText">
              <string>http://127.0.0.1:8080 socks5://127.0.0.1:1089</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QPushButton" name="pushButton_curlMode">
+            <property name="text">
+             <string>curl模式</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>保存位置</string>
             </property>
            </widget>
           </item>
@@ -142,6 +146,20 @@
             </property>
             <property name="text">
              <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="2">
+           <widget class="QPushButton" name="pushButton_TsTempDir">
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="0">
+           <widget class="QLabel" name="label_10">
+            <property name="text">
+             <string>临时目录</string>
             </property>
            </widget>
           </item>
