--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>770</width>
-    <height>353</height>
+    <height>360</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,6 +22,21 @@
       </property>
       <widget class="QWidget" name="page">
        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
          <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
           <item row="0" column="0">
@@ -285,11 +300,14 @@
          <number>0</number>
         </property>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1,0">
+         <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,1,0">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetMaximumSize</enum>
+          </property>
           <property name="spacing">
            <number>0</number>
           </property>
-          <item>
+          <item row="0" column="0">
            <widget class="QLabel" name="label_7">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
@@ -314,24 +332,29 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item row="0" column="1">
            <widget class="QLineEdit" name="lineEdit_mergeDir"/>
           </item>
-          <item>
+          <item row="0" column="2">
            <widget class="QToolButton" name="toolButton_selectMergeDir">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
            </widget>
           </item>
-         </layout>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,1,0">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <item>
+          <item row="1" column="0">
            <widget class="QLabel" name="label_9">
             <property name="minimumSize">
              <size>
@@ -350,14 +373,14 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item row="1" column="1">
            <widget class="QLineEdit" name="lineEdit_mergeFileName">
             <property name="placeholderText">
              <string>all.mp4</string>
             </property>
            </widget>
           </item>
-          <item>
+          <item row="1" column="2">
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
