--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -83,7 +83,7 @@
           <item row="7" column="1">
            <widget class="QLineEdit" name="lineEdit_TsTempDir">
             <property name="placeholderText">
-             <string>默认为保存位置</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -97,7 +97,7 @@
           <item row="3" column="1">
            <widget class="QLineEdit" name="lineEdit_SkipTsExpr">
             <property name="placeholderText">
-             <string>1,92-100,http.code=403,if-http.code-merge_ts</string>
+             <string>1,92-100,http.code=403,if-http.code-merge_ts,time:00:05:12-00:07:20</string>
             </property>
            </widget>
           </item>
