--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -83,7 +83,7 @@
           <item row="7" column="1">
            <widget class="QLineEdit" name="lineEdit_TsTempDir">
             <property name="placeholderText">
-             <string/>
+             <string>默认为保存位置</string>
             </property>
            </widget>
           </item>
