--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -223,6 +223,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="1">
+           <widget class="QCheckBox" name="checkBox_UseServerSideTime">
+            <property name="text">
+             <string>使用服务端提供的文件时间</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
