--- a/m3u8d-qt/mainwindow.ui
+++ b/m3u8d-qt/mainwindow.ui
@@ -223,6 +223,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="1">
+           <widget class="QCheckBox" name="checkBox_WithSkipLog">
+            <property name="text">
+             <string>在mp4旁记录跳过ts文件的信息</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
